--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -75,7 +75,7 @@
             <div class="col-lg-12">
                 <div class="product-order">
                     <h3>your order details</h3>
-                    <div class="row product-order-detail">
+                    <!-- <div class="row product-order-detail">
                         <div class="col-3 order_detail">
                             <h4>Product Image</h4>
                         </div>
@@ -91,27 +91,22 @@
                     </div>
                     <div class="row product-order-detail" *ngFor="let product of orderDetails[0].orderDetails">
                         <div class="col-3">
-                            <!-- <img [src]="product.productImg[0]" alt="" class="img-fluid"> -->
-                            <!-- <img [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]"
-                                class="img-fluid"> -->
+                            
                             <img *ngIf="product?.setNo>0" [src]="ProductImage+product?.productId+'/productSetImage/'+product?.setNo+'/'+product?.productImg[0]" class="img-fluid">
                             <img *ngIf="product?.setNo==0" [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]" class="img-fluid">
                         </div>
                         <div class="col-6 order_detail">
                             <div>
-                                <!-- <h4>product name</h4> -->
                                 <h5>{{ product?.productName }}</h5>
                             </div>
                         </div>
                         <div class="col-1 order_detail">
                             <div>
-                                <!-- <h4>Qty</h4> -->
                                 <h5>{{ product.quantity }}</h5>
                             </div>
                         </div>
                         <div class="col-2 order_detail">
                             <div>
-                                <!-- <h4>price</h4> -->
                                 <h5>{{ product?.price | currency:productService?.Currency.currency:'symbol' }}
                                 </h5>
                             </div>
@@ -134,6 +129,91 @@
                         <h3>total
                             <span>{{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}</span>
                         </h3>
+                    </div> -->
+                    <div class="order-box">
+                        <table class="table table-bordered table-hover">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th class="thead-dark">
+                                        Product
+                                    </th>
+                                    <th class="thead-dark">
+                                        Price
+                                    </th>
+                                    <th class="thead-dark">
+                                        Qty
+                                    </th>
+                                    <th class="thead-dark">
+                                        GST Rate(%)
+                                    </th>
+                                    <th class="thead-dark">
+                                        GST Amount
+                                    </th>
+                                    <th class="thead-dark">
+                                        Total
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let product of orderDetails[0].orderDetails">
+                                    <td>
+                                        {{ product?.productName }}
+                                    </td>
+                                    <td>
+                                        {{ product?.price | currency:productService?.Currency.currency:'symbol'}}
+                                    </td>
+                                    <td>
+                                        {{ product?.quantity }}
+                                    </td>
+                                    <td>
+                                        {{ product?.gstRate }}%
+                                    </td>
+                                    <td>
+                                        {{ product?.gstAmount | currency:productService?.Currency.currency:'symbol'}}
+                                    </td>
+                                    <td>
+                                        <span style="float: right; font-size: 16px; line-height: 20px;  font-weight: 400;">
+                                            {{ (product.price*product?.quantity+product?.gstAmount) | currency:productService?.Currency.currency:'symbol' }}</span>
+                                    </td>
+                                </tr>
+                                <tr *ngIf='!orderDetails.length'>
+                                    <td colspan="6">
+                                        There are no products in cart
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="4">
+                                        <b>Subtotal</b>
+                                    </td>
+                                    <td>
+                                        <b>{{ getTotalGSTAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
+                                    </td>
+                                    <td>
+                                        <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                        {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td colspan="4">
+                                        <b> Shipping</b>
+                                    </td>
+                                    <td colspan="2">
+                                        <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                             <b>Free Shipping</b></span>
+                                    </td>
+                                </tr>
+                                <tr class="total">
+                                    <td colspan="5">
+                                        <b>Total</b>
+                                    </td>
+                                    <td>
+                                        <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                            {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
