--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -21,13 +21,11 @@
                             <!-- <a [routerLink]="['/shop/wishlist']"><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a> -->
                             &nbsp;
                         </li>
-                        <li class="mobile-wishlist"
-                            *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
+                        <li class="mobile-wishlist" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
                             <span class="Logininfo"><a (click)="Login()"><i class="fa fa-user"
                                         aria-hidden="true"></i>Login</a></span>
                         </li>
-                        <li class="onhover-dropdown mobile-account"
-                            *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
+                        <li class="onhover-dropdown mobile-account" *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
                             <i class="fa fa-user" aria-hidden="true"></i> {{LoggedInUser[0].name}}
                             <ul class="onhover-show-div">
                                 <li>
@@ -53,7 +51,7 @@
                 <div class="main-menu">
                     <div class="menu-left">
                         <app-left-menu></app-left-menu>
-                        <div class="brand-logo">
+                        <div class="brand-logo" style="width: 350px !important;">
                             <a routerLink="/home/fashion" id="headerlogo">
                                 <img [src]="themeLogo" class="img-fluid" style="max-width: 60%!important;" alt="logo">
                             </a>
