--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -7,7 +7,7 @@
             <h3><strong>Your Cart is Empty</strong></h3>
             <h4>Add something to make me happy :)</h4>
         </div>
-        <div class="row" *ngIf="productSizeColor.length">
+        <div class="row" *ngIf="productSizeColor.length"  style="overflow-y: scroll;">
             <div class="col-sm-12">
                 <table class="table cart-table table-responsive-xs">
                     <thead>
