--- a/src/app/home/fashion/fashion-one/fashion-one.component.html
+++ b/src/app/home/fashion/fashion-one/fashion-one.component.html
@@ -10,19 +10,23 @@
 <!-- collection banner start-->
 <section class="pb-0">
     <div class="container">
-        <div class="row partition2">
-            <div class="col-md-6" *ngFor="let collection of collections">
-                <a [routerLink]="['/shop/collection/left/sidebar']" [queryParams]="{ category: 'fashion'}">
-                    <div class="collection-banner p-right text-center">
-                        <img [src]="collection.image" class="img-fluid" alt="collection-banner">
-                        <div class="contain-banner">
-                            <div>
-                                <h4>{{collection.save}}</h4>
-                                <h2>{{collection.title}}</h2>
+        <div class="row">
+            <div class="col-md-10 offset-md-2">
+                <div class="row partition2">
+                    <div class="col-md-5" *ngFor="let collection of collections">
+                        <a [routerLink]="['/shop/collection/left/sidebar']" [queryParams]="{ category: 'fashion'}">
+                            <div class="collection-banner p-right text-center">
+                                <img [src]="collection.image" class="img-fluid" alt="collection-banner">
+                                <div class="contain-banner">
+                                    <div>
+                                        <h4>{{collection.save}}</h4>
+                                        <h2>{{collection.title}}</h2>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
     </div>
