--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -13,19 +13,21 @@
                 </div>
                 <div class="col-lg-5 text-right">
                     <ul class="header-dropdown">
-                        <li class="compare">
-                            <!-- <a [routerLink]="['/shop/compare']"><i class="fa fa-random" aria-hidden="true"></i>Compare</a> -->
+                        <!--  <li class="compare">
+                           <a [routerLink]="['/shop/compare']"><i class="fa fa-random" aria-hidden="true"></i>Compare</a> 
                             &nbsp;
                         </li>
                         <li class="mobile-wishlist">
-                            <!-- <a [routerLink]="['/shop/wishlist']"><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a> -->
+                         <a [routerLink]="['/shop/wishlist']"><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a>
                             &nbsp;
-                        </li>
-                        <li class="mobile-wishlist" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
+                        </li> -->
+                        <li class="onhover-dropdown mobile-account"
+                            *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
                             <span class="Logininfo"><a (click)="Login()"><i class="fa fa-user"
                                         aria-hidden="true"></i>Login</a></span>
                         </li>
-                        <li class="onhover-dropdown mobile-account" *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
+                        <li class="onhover-dropdown mobile-account"
+                            *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
                             <i class="fa fa-user" aria-hidden="true"></i> {{LoggedInUser[0].name}}
                             <ul class="onhover-show-div">
                                 <li>
@@ -51,9 +53,9 @@
                 <div class="main-menu">
                     <div class="menu-left">
                         <app-left-menu></app-left-menu>
-                        <div class="brand-logo" style="width: 350px !important;">
+                        <div class="brand-logo">
                             <a routerLink="/home/fashion" id="headerlogo">
-                                <img [src]="themeLogo" class="img-fluid" style="max-width: 60%!important;" alt="logo">
+                                <img [src]="themeLogo" class="img-fluid" alt="logo">
                             </a>
                         </div>
                     </div>
