--- a/src/app/home/fashion/fashion-one/fashion-one.component.html
+++ b/src/app/home/fashion/fashion-one/fashion-one.component.html
@@ -119,7 +119,7 @@
 
 <!-- services start-->
 <div class="container">
-    <section class="service border-section small-section">
+    <section class="service border-section small-section d-none">
         <app-services></app-services>
     </section>
 </div>
