--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -71,7 +71,7 @@
 <!--Team ends-->
 <!-- service section -->
 <div class="container about-cls section-b-space">
-    <section class="service border-section small-section">
+    <section class="service border-section small-section d-none">
         <div class="row">
             <div class="col-md-4 service-block">
                 <div class="media">
