--- a/src/app/shared/footer/footer-one/footer-one.component.html
+++ b/src/app/shared/footer/footer-one/footer-one.component.html
@@ -1,6 +1,6 @@
 <!--footer section -->
 <footer [class]="class">
-	<div class="light-layout" *ngIf="newsletter">
+	<div class="light-layout d-none" *ngIf="newsletter">
 		<div class="container">
 			<section class="small-section border-section border-top-0">
 				<div class="row">
@@ -33,7 +33,8 @@
 					</div>
 					<div class="footer-contant">
 						<div class="footer-logo">
-							<img [src]="themeLogo" alt="logo">
+							<!-- <img [src]="themeLogo" alt="logo"> -->
+							<h4>VIKRAM CREATIONS PRIVATE LIMITED</h4>
 						</div>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </p>
 						<div class="footer-social">
@@ -57,7 +58,7 @@
                         </div>
 					</div>
 				</div>
-				<div class="col offset-xl-1">
+				<div class="col offset-xl-1 d-none">
 					<div class="sub-title">
 						<div class="footer-title">
                             <h4>Categories</h4>
