--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -23,7 +23,7 @@
                         </li> -->
                         <li class="onhover-dropdown mobile-account"
                             *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
-                            <span class="Logininfo"><a (click)="Login()"><i class="fa fa-user"
+                            <span class="Logininfo"><a (click)="Login()" class="btn btn-solid btn-solid-small"><i class="fa fa-user"
                                         aria-hidden="true"></i>Login</a></span>
                         </li>
                         <li class="onhover-dropdown mobile-account"
