--- a/src/app/shop/collection/collection-left-sidebar/collection-left-sidebar.component.html
+++ b/src/app/shop/collection/collection-left-sidebar/collection-left-sidebar.component.html
@@ -38,7 +38,7 @@
                         </app-product-box-vertical-slider>
                         <!-- side-bar single product slider end -->
                         <!-- side-bar banner start here -->
-                        <div class="collection-sidebar-banner">
+                        <div class="collection-sidebar-banner d-none">
                             <a [routerLink]="['/shop/collection/left/sidebar']">
                                 <img src="assets/images/collection-sidebar-banner.png" class="img-fluid" alt="banner">
                             </a>
@@ -50,7 +50,7 @@
                     <div class="page-main-content">
                         <div class="row">
                             <div class="col-sm-12">
-                                <div class="top-banner-wrapper">
+                                <div class="top-banner-wrapper d-none">
                                     <a [routerLink]="['/shop/collection/left/sidebar']">
                                         <img src="assets/images/collection-banner.jpg" class="img-fluid " alt="">
                                     </a>
