--- a/src/assets/scss/theme/_responsive.scss
+++ b/src/assets/scss/theme/_responsive.scss
@@ -7080,7 +7080,7 @@ Fashion-2 Demo Responsive CSS
     }
 }
 
-// New changes .............................
+// New changes by .............................
 @media (max-width: 991px){
     .home-slider {
         .home {
@@ -7102,7 +7102,8 @@ Fashion-2 Demo Responsive CSS
     }
     }
 @media (max-width: 577px){
-.main-menu .menu-right .icon-nav .mobile-setting, .main-menu .menu-right .icon-nav .mobile-cart, .main-menu .menu-right .icon-nav .mobile-search {
+.main-menu .menu-right .icon-nav .mobile-setting, .main-menu .menu-right .icon-nav .mobile-cart, .main-menu .menu-right .icon-nav .mobile-search,
+.top-header .header-dropdown .mobile-account {
     bottom: 5px;
 }
 }
@@ -7116,4 +7117,17 @@ Fashion-2 Demo Responsive CSS
         }
     }
 }
+}
+@media (max-width: 577px){
+    section, .section-t-space {
+        padding-top: 10px;
+    }
+}
+@media (max-width: 767px){
+    .btn-solid.btn-solid-small {
+        font-weight: normal;
+        border: 1px solid var(--theme-deafult);
+        background: transparent;
+        border: 0
+    }
 }
