--- a/src/app/pages/account/register/register.component.html
+++ b/src/app/pages/account/register/register.component.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
-                <h3>create account</h3>
+                <h4>Let's start creating your new account.</h4>
                 <div class="theme-card">
 
                     <!-- {{RegistrationForm.value|json}} -->
