--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -7,7 +7,7 @@
                     <div class="header-contact">
                         <ul>
                             <li>VIKRAM CREATIONS PRIVATE LIMITED</li>
-                            <li><i class="fa fa-phone" aria-hidden="true"></i>Call Us: 123 - 456 - 7890</li>
+                            <li><i class="fa fa-phone" aria-hidden="true"></i>Call Us: +91-98918-69911</li>
                         </ul>
                     </div>
                 </div>
