--- a/src/app/home/fashion/fashion-one/fashion-one.component.html
+++ b/src/app/home/fashion/fashion-one/fashion-one.component.html
@@ -43,7 +43,11 @@
         <div class="col-lg-6 offset-lg-3">
             <div class="product-para">
                 <p class="text-center">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry, Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                    Enhancing your world
+                    with our designs.The company owns and operates 7 brands namely Elomelo, Style Girl, A Sweet Design,
+                    Elly Ross, Style Plus, Denim Studio and Active Spirits, each with their own distinct identity. All
+                    these branded garments are especially designed and crafted by a well trianed team of in-house
+                    designers.
                 </p>
             </div>
         </div>
@@ -57,7 +61,8 @@
                     <ng-container *ngFor="let product of productskartselling | slice:0:16">
                         <ng-template carouselSlide>
                             <div class="product-box">
-                                <app-product-box [productkart]="product" [currency]="productService?.Currency" [thumbnail]="true">
+                                <app-product-box [productkart]="product" [currency]="productService?.Currency"
+                                    [thumbnail]="true">
                                 </app-product-box>
                             </div>
                         </ng-template>
@@ -71,7 +76,8 @@
 
 <!-- Parallax banner start-->
 <section class="p-0">
-    <div class="full-banner parallax-banner1 parallax text-center p-left" [ngStyle]="{'background-image': 'url(assets/images/parallax/1.jpg)'}">
+    <div class="full-banner parallax-banner1 parallax text-center p-left"
+        [ngStyle]="{'background-image': 'url(assets/images/parallax/1.jpg)'}">
         <div class="container">
             <div class="row">
                 <div class="col">
