--- a/src/app/shared/footer/footer-one/footer-one.component.html
+++ b/src/app/shared/footer/footer-one/footer-one.component.html
@@ -13,9 +13,12 @@
 						</div>
 					</div>
 					<div class="col-lg-6">
-						<form class="form-inline subscribe-form" action="https://pixelstrap.us19.list-manage.com/subscribe/post?u=5a128856334b598b395f1fc9b&amp;id=082f74cbda" target="_blank" method="post">
+						<form class="form-inline subscribe-form"
+							action="https://pixelstrap.us19.list-manage.com/subscribe/post?u=5a128856334b598b395f1fc9b&amp;id=082f74cbda"
+							target="_blank" method="post">
 							<div class="form-group mx-sm-3">
-								<input type="email" #name name="EMAIL" id="mce-EMAIL" class="form-control" placeholder="Enter your email">
+								<input type="email" #name name="EMAIL" id="mce-EMAIL" class="form-control"
+									placeholder="Enter your email">
 							</div>
 							<button type="submit" class="btn btn-solid">subscribe</button>
 						</form>
@@ -36,72 +39,77 @@
 							<!-- <img [src]="themeLogo" alt="logo"> -->
 							<h4>VIKRAM CREATIONS PRIVATE LIMITED</h4>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </p>
+						<p>Established in the year 1999, Vikram Creations Pvt. Ltd, is a well known fashion house based out of New
+							Delhi, India. The comapany is a renowned as a manufacturer, wholesaler, trader and supplier of women
+							fashion. The company owns and operates 7 brands namely Elomelo, Style Girl, A Sweet Design, Elly Ross,
+							Style Plus, Denim Studio and Active Spirits, each with their own distinct identity. All these branded
+							garments are especially designed and crafted by a well trianed team of in-house designers. </p>
 						<div class="footer-social">
-                            <ul>
-                                <li>
-                                    <a href="javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)"><i class="fa fa-google-plus" aria-hidden="true"></i></a>                 
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)"><i class="fa fa-rss" aria-hidden="true"></i></a>
-                                </li>
-                            </ul>
-                        </div>
+							<ul>
+								<li>
+									<a href="javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+								</li>
+								<li>
+									<a href="javascript:void(0)"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+								</li>
+								<li>
+									<a href="javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+								</li>
+								<li>
+									<a href="javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+								</li>
+								<li>
+									<a href="javascript:void(0)"><i class="fa fa-rss" aria-hidden="true"></i></a>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 				<div class="col offset-xl-1 d-none">
 					<div class="sub-title">
 						<div class="footer-title">
-                            <h4>Categories</h4>
-                        </div>
-                        <div class="footer-contant">
-                            <ul>
-                                <li><a href="javascript:void(0)">Womens Fashion</a></li>
-                                <li><a href="javascript:void(0)">Mens Fashion</a></li>
-                                <li><a href="javascript:void(0)">Kids Fashion</a></li>
-                                <li><a href="javascript:void(0)">Featured</a></li>
-                            </ul>
-                        </div>
-					</div>
-				</div>
-				<div class="col">
-					<div class="sub-title">
-						<div class="footer-title">
-                            <h4>why we choose</h4>
-                        </div>
-                        <div class="footer-contant">
-                            <ul>
-                                <li><a href="javascript:void(0)">shipping & return</a></li>
-                                <li><a href="javascript:void(0)">secure shopping</a></li>
-                                <li><a href="javascript:void(0)">gallary</a></li>
-                                <li><a href="javascript:void(0)">affiliates</a></li>
-                                <li><a href="javascript:void(0)">contacts</a></li>
-                            </ul>
-                        </div>
-					</div>
-				</div>
-				<div class="col">
-					<div class="sub-title">
-						<div class="footer-title">
-						    <h4>store information</h4>
+							<h4>Categories</h4>
 						</div>
 						<div class="footer-contant">
-						    <ul class="contact-list">
-						        <li><i class="fa fa-map-marker"></i>Multikart Demo Store, Demo store
-						            India 345-659</li>
-						        <li><i class="fa fa-phone"></i>Call Us: 123-456-7898</li>
-						        <li><i class="fa fa-envelope-o"></i>Email Us: <a>Support@Fiot.com</a></li>
-						        <li><i class="fa fa-fax"></i>Fax: 123456</li>
-						    </ul>
+							<ul>
+								<li><a href="javascript:void(0)">Womens Fashion</a></li>
+								<li><a href="javascript:void(0)">Mens Fashion</a></li>
+								<li><a href="javascript:void(0)">Kids Fashion</a></li>
+								<li><a href="javascript:void(0)">Featured</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col">
+					<div class="sub-title">
+						<div class="footer-title">
+							<h4>Why Us</h4>
+						</div>
+						<div class="footer-contant">
+							<ul>
+								<li><a href="javascript:void(0)">SHIPPING & RETURN</a></li>
+								<li><a href="javascript:void(0)">SECURE SHOPPING </a></li>
+								<li><a href="javascript:void(0)">ALL PAYMENT MODE</a></li>
+								<li><a href="javascript:void(0)">LATEST TRENDS</a></li>
+								<li><a href="javascript:void(0)">QUALITY GUARANTEED</a></li>
+								<li><a href="javascript:void(0)">TRANSPARENT-DEALING</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col">
+					<div class="sub-title">
+						<div class="footer-title">
+							<h4>store information</h4>
+						</div>
+						<div class="footer-contant">
+							<ul class="contact-list">
+								<li><i class="fa fa-map-marker"></i> 2406, Hardhyan Singh Marg, Block 37J, Nai Walan, Karol Bagh, New
+									Delhi, Delhi 110005</li>
+								<li><i class="fa fa-phone"></i>Call Us: +91-98918-69911</li>
+								<li><i class="fa fa-envelope-o"></i>Email Us: <a>customercare@vikramcreations.com</a></li>
+								<!-- <li><i class="fa fa-fax"></i>Fax: 123456</li> -->
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -111,33 +119,34 @@
 	<div class="sub-footer">
 		<div class="container">
 			<div class="row">
-                <div class="col-xl-6 col-md-6 col-sm-12">
-                  <div class="footer-end">
-                    <p><i class="fa fa-copyright" aria-hidden="true"></i> {{ today | date:'y'}} theme forest powered by pixelstrap</p>
-                  </div>
-                </div>
-                <div class="col-xl-6 col-md-6 col-sm-12">
-                  <div class="payment-card-bottom">
-                    <ul>
-                      <li>
-                        <a><img src="assets/images/icon/visa.png" alt=""></a>
-                      </li>
-                      <li>
-                        <a><img src="assets/images/icon/mastercard.png" alt=""></a>
-                      </li>
-                      <li>
-                        <a><img src="assets/images/icon/paypal.png" alt=""></a>
-                      </li>
-                      <li>
-                        <a><img src="assets/images/icon/american-express.png" alt=""></a>
-                      </li>
-                      <li>
-                        <a><img src="assets/images/icon/discover.png" alt=""></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-            </div>
+				<div class="col-xl-6 col-md-6 col-sm-12">
+					<div class="footer-end">
+						<p><i class="fa fa-copyright" aria-hidden="true"></i> {{ today | date:'y'}} Copyright 2020 ECom, Inc. All
+							rights Reserved.</p>
+					</div>
+				</div>
+				<div class="col-xl-6 col-md-6 col-sm-12">
+					<div class="payment-card-bottom">
+						<ul>
+							<li>
+								<a><img src="assets/images/icon/visa.png" alt=""></a>
+							</li>
+							<li>
+								<a><img src="assets/images/icon/mastercard.png" alt=""></a>
+							</li>
+							<li>
+								<a><img src="assets/images/icon/paypal.png" alt=""></a>
+							</li>
+							<li>
+								<a><img src="assets/images/icon/american-express.png" alt=""></a>
+							</li>
+							<li>
+								<a><img src="assets/images/icon/discover.png" alt=""></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </footer>
