--- a/src/app/shop/collection/collection-left-sidebar/collection-left-sidebar.component.html
+++ b/src/app/shop/collection/collection-left-sidebar/collection-left-sidebar.component.html
@@ -83,7 +83,7 @@
                                     </li>
                                     <li class="clear_filter" *ngIf="tags.length > 0">
                                         <a href="javascript:void(0)" class="clear_filter" (click)="removeAllTags()">
-                                            Clear all
+                                            Clear filter
                                         </a>
                                     </li>
                                 </ul>
