--- a/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
@@ -37,7 +37,7 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-4">
                                 <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar
                                     class="product-slick">
                                     <ng-container
@@ -52,27 +52,30 @@
                                         </ng-template>
                                     </ng-container>
                                 </owl-carousel-o>
-                                <div class="col-12 p-0">
-                                    <!-- *ngIf="product?.images.length > 1" -->
-                                    <div class="slider-nav">
-                                        <owl-carousel-o [options]="ProductDetailsThumbConfig" class="product-slick">
-                                            <ng-container
-                                                *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
-                                                <ng-template carouselSlide [id]="i">
-                                                    <div class="owl-thumb" [class.active]="i == activeSlide">
-                                                        <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                                                            [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
-                                                            [alt]="image.alt" class="img-fluid"
-                                                            (click)="owlCar.to(activeSlide1 = i.toString())">
-                                                    </div>
-                                                </ng-template>
-                                            </ng-container>
-                                        </owl-carousel-o>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <!-- *ngIf="product?.images.length > 1" -->
+                                        <div class="slider-nav">
+                                            <owl-carousel-o [options]="ProductDetailsThumbConfig" class="product-slick">
+                                                <ng-container
+                                                    *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
+                                                    <ng-template carouselSlide [id]="i">
+                                                        <div class="owl-thumb" [class.active]="i == activeSlide">
+                                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                                                                [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                                                                [alt]="image.alt" class="img-fluid"
+                                                                (click)="owlCar.to(activeSlide1 = i.toString())">
+                                                        </div>
+                                                    </ng-template>
+                                                </ng-container>
+                                            </owl-carousel-o>
+                                        </div>
                                     </div>
                                 </div>
+                                
                             </div>
 
-                            <div class="col-lg-6 rtl-text">
+                            <div class="col-lg-8 rtl-text">
                                 <div class="product-right">
                                     <h2>{{ productkart[0]?.productName }}</h2>
                                     <h4>
